data/derived/comb/progs/unify/prog6103.ml.out
Characters 424-429:
  in List.rev( [(x/10000) mod 10]@[(x/1000) mod 10]@[(x/100) mod 10]@[(x/10) mod 10]@[(x/1) x mod 10])@res;;
                                                                                      ^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
